Revert "Snap for 7817384 from 259f87fcd7985c85da9f35ea22672cc930..."
Revert submission 1854238-release-request-f4224467-dc50-42c1-aca0-601b61c9f033-for-aosp-simpleperf-release-7817384

Reason for revert: admin
Reverted changes: /q/submissionid:1854238-release-request-f4224467-dc50-42c1-aca0-601b61c9f033-for-aosp-simpleperf-release-7817384

Change-Id: I3ca4b390805b923833fc35cc017274c4d3ba3b6d